# NLPFinalProject

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt  requirements.yml
scripts/: check_ollama.sh
src/experiments/: __init__.py  output_task.py  telephone.py
src/io/: ollama_client.py
src/metrics/: __init__.py  drift.py  similarity.py
src/visualization/: utils.py
