[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-final-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel",
    "jupyter",
    "requests",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "sentence-transformers",
    "scikit-learn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
